change to support command-line builds